tests/ui/error-codes/E0642.stderr
error[E0642]: patterns aren't allowed in functions without bodies
  --> $DIR/E0642.rs:10:12
   |
LL |     fn foo((x, y): (i32, i32));
   |            ^^^^^^ pattern not allowed in function without body
   |
help: give this argument a name or use an underscore to ignore it
   |
LL -     fn foo((x, y): (i32, i32));
LL +     fn foo(_: (i32, i32));
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0642`.
